# haskell-gtk-hello-world

./: hello-world.cabal  readme.md  shell.nix  stack.yaml
app/: Main.hs
hello-world-gtk2/: hello-world-gtk2.cabal
hello-world-gtk2/app/: Main.hs
hello-world-gtk2/src/: HelloWorldGtk2.hs
hello-world-gtk3/: hello-world-gtk3.cabal  shell.nix
hello-world-gtk3/app/: Main.hs
hello-world-gtk3/src/: HelloWorldGtk3.hs
src/: HelloWorld.hs
