name:                hello-world-gtk3
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   HelloWorldGtk3
  build-depends:     base >= 4.7 && < 5, gtk
  default-language:  Haskell2010

executable hello-world-gtk3
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base, hello-world-gtk3
  default-language:  Haskell2010
